--- a/etal.html
+++ b/etal.html
@@ -12,7 +12,9 @@
   <header>
     <nav>
       <div class="logo">
-        <h1>e-Tal</h1>
+        <a href="index.html">
+          <img src="images/logo.png" alt="e-Tal Logo" />
+        </a>
       </div>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
@@ -95,3 +97,16 @@
   <script src="js/etal.js"></script>
 </body>
 </html>
+
+<div class="social-share">
+  <p>Share:</p>
+  <a href="https://twitter.com/intent/tweet?text=Check this out" target="_blank">
+    <img src="icons/twitter.svg" alt="X" />
+  </a>
+  <a href="https://facebook.com/sharer/sharer.php?u=url" target="_blank">
+    <img src="icons/facebook.svg" alt="Facebook" />
+  </a>
+  <a href="https://linkedin.com/shareArticle?mini=true&url=url" target="_blank">
+    <img src="icons/linkedin.svg" alt="LinkedIn" />
+  </a>
+</div>
