--- a/etal.html
+++ b/etal.html
@@ -23,6 +23,7 @@
         <li><a href="#scouts">For Scouts</a></li>
         <li><a href="#contact">Contact Us</a></li>
         <li><a href="#signup" class="btn">Sign Up</a></li>
+        <li><a href="#login" class="btn">Log in</a></li>
       </ul>
     </nav>
   </header>
@@ -36,6 +37,7 @@
       </p>
       <a href="#signup" class="btn hero-btn">Join Now</a>
     </div>
+    <img src="images/football_banner.jpg" alt="Football Banner" class="hero-image" />
   </section>
 
   <!-- Talents Section -->
@@ -46,6 +48,14 @@
         <img src="images/athlete1.jpg" alt="Athlete 1" />
         <h3>Hayweezyana</h3>
         <p>Football | Age 19</p>
+      </div>
+      <div class="athlete">
+        <img src="images/athlete2.jpg" alt="Athlete 2" />
+        <h3>Ben  Kay</h3>
+        <p>Position: Midfielder</p>
+      </div>
+    </div>
+  </section>
         
         <!-- Video Embed (YouTube) -->
         <iframe width="320" height="240" src="https://www.youtube.com/watch?v=MZ5z-dLhjUE&pp=ygUYbGFtaW5lIHlhbWFsIGdyb3dpbmcgdXAg" title="My highlight" frameborder="0" allowfullscreen></iframe>
@@ -72,20 +82,6 @@
     <form id="chat-form">
       <input type="text" id="message-input" placeholder="Type your message" required />
       <button type="submit" class="btn">Send</button>
-    </form>
-  </section>
-
-  <!-- Contact Us Section -->
-  <section id="contact" class="contact">
-    <h2>Contact Us</h2>
-    <form id="contactForm">
-      <label for="name">Name</label>
-      <input type="text" id="name" required />
-      <label for="email">Email</label>
-      <input type="email" id="email" required />
-      <label for="message">Message</label>
-      <textarea id="message" required></textarea>
-      <button type="submit" class="btn">Send Message</button>
     </form>
   </section>
 
