--- a/etal.html
+++ b/etal.html
@@ -13,7 +13,7 @@
     <nav>
       <div class="logo">
         <a href="index.html">
-          <img src="images/logo.png" alt="e-Tal Logo" />
+          <img src="images/logo.png" alt="Etal Logo" />
         </a>
       </div>
       <ul class="nav-links">
