--- a/etal.html
+++ b/etal.html
@@ -47,12 +47,12 @@
       <div class="athlete">
         <img src="images/athlete1.jpg" alt="Athlete 1" />
         <h3>Hayweezyana</h3>
-        <p>Football | Age 19</p>
+        <p>Position: Striker | Age: 14</p>
       </div>
-      <div class="athlete">
+      <div class="athlete-profiles">
         <img src="images/athlete2.jpg" alt="Athlete 2" />
         <h3>Ben  Kay</h3>
-        <p>Position: Midfielder</p>
+        <p>Position: Midfielder | Age: 13</p>
       </div>
     </div>
   </section>
@@ -97,12 +97,12 @@
 <div class="social-share">
   <p>Share:</p>
   <a href="https://twitter.com/intent/tweet?text=Check this out" target="_blank">
-    <img src="icons/twitter.svg" alt="X" />
+    <img src="icon/twitter.svg" alt="X" />
   </a>
   <a href="https://facebook.com/sharer/sharer.php?u=url" target="_blank">
-    <img src="icons/facebook.svg" alt="Facebook" />
+    <img src="icon/facebook.svg" alt="Facebook" />
   </a>
   <a href="https://linkedin.com/shareArticle?mini=true&url=url" target="_blank">
-    <img src="icons/linkedin.svg" alt="LinkedIn" />
+    <img src="icon/linkedin.svg" alt="LinkedIn" />
   </a>
 </div>
