--- a/etal.html
+++ b/etal.html
@@ -38,6 +38,7 @@
       <a href="#signup" class="btn hero-btn">Join Now</a>
     </div>
     <img src="images/football_banner.jpg" alt="Football Banner" class="hero-image" />
+  </div>
   </section>
 
   <!-- Talents Section -->
