--- a/talents.html
+++ b/talents.html
@@ -20,6 +20,7 @@
         <li><a href="scouts.html">For Scouts</a></li>
         <li><a href="contact.html">Contact Us</a></li>
         <li><a href="#signup" class="btn">Sign Up</a></li>
+        <li><a href="#login" class="btn">Log in</a></li>
       </ul>
     </nav>
   </header>
