--- a/etal.html
+++ b/etal.html
@@ -59,7 +59,7 @@
   </section>
         
         <!-- Video Embed (YouTube) -->
-        <iframe width="320" height="240" src="https://www.youtube.com/watch?v=MZ5z-dLhjUE&pp=ygUYbGFtaW5lIHlhbWFsIGdyb3dpbmcgdXAg" title="My highlight" frameborder="0" allowfullscreen></iframe>
+        <iframe width="320" height="240" src="https://www.youtube.com/embed/MZ5z-dLhjUE" title="My highlight" frameborder="0" allowfullscreen></iframe>
         
         <!-- Social Media Sharing Buttons -->
         <div class="social-share">
