--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>e-Tal - Discover Emerging Sports Talents</title>
 
   <!-- Link to External CSS File -->
-  <link rel="stylesheet" href="css/etal.css" />
+  <link rel="stylesheet" href="css/index.css" />
 
   <!-- Header -->
   <header>
