--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us - e-Tal</title>
-  <link rel="stylesheet" href="css/etal.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
   <!-- Header -->
