--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <li><a href="talents.html">For Athletes</a></li>
         <li><a href="scouts.html">For Scouts</a></li>
         <li><a href="contact.html">Contact Us</a></li>
-        <li><a href="#signup" class="btn">Sign Up</a></li>
+        <li><a href="#signup.html" class="btn">Sign Up</a></li>
       </ul>
     </nav>
   </header>
