--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       </div>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#talents">Talents</a></li>
-        <li><a href="#scouts">For Scouts</a></li>
-        <li><a href="#contact">Contact Us</a></li>
-        <li><a href="#signup" class="btn">Sign Up</a></li>
-        <li><a href="#login" class="btn">Log in</a></li>
+        <li><a href="#about.html">About Us</a></li>
+        <li><a href="#talents.html">Talents</a></li>
+        <li><a href="#scouts.html">For Scouts</a></li>
+        <li><a href="#contact.html">Contact Us</a></li>
+        <li><a href="#signup.html" class="btn">Sign Up</a></li>
+        <li><a href="#login.html" class="btn">Log in</a></li>
       </ul>
     </nav>
   </header>
@@ -35,7 +35,7 @@
       <p>
         Connect with scouts, teams, and sponsors from all over the world.
       </p>
-      <a href="#signup" class="btn hero-btn">Join Now</a>
+      <a href="#signup.html" class="btn hero-btn">Join Now</a>
     </div>
     <img src="images/football_banner.jpg" alt="Football Banner" class="hero-image" />
   </div>
