--- a/talents.html
+++ b/talents.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>For Athletes - e-Tal</title>
-  <link rel="stylesheet" href="css/etal.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
   <!-- Header -->
@@ -19,8 +19,8 @@
         <li><a href="talents.html">For Athletes</a></li>
         <li><a href="scouts.html">For Scouts</a></li>
         <li><a href="contact.html">Contact Us</a></li>
-        <li><a href="#signup" class="btn">Sign Up</a></li>
-        <li><a href="#login" class="btn">Log in</a></li>
+        <li><a href="#signup.html" class="btn">Sign Up</a></li>
+        <li><a href="#login.html" class="btn">Log in</a></li>
       </ul>
     </nav>
   </header>
